--- a/views/resources.haml
+++ b/views/resources.haml
@@ -4,6 +4,7 @@
     %title
       = @resource["title"]
     %meta{name: "description", content: @resource["description"]}
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
     %link{rel: "stylesheet", href: "http://yui.yahooapis.com/2.8.0r4/build/reset/reset-min.css"}
     %link{rel: "stylesheet", href: "base.css"}
     %link{rel: "stylesheet", href: "theme.css"}
