--- a/views/resources.haml
+++ b/views/resources.haml
@@ -20,10 +20,15 @@
     %section.resources
       .container
         - @resource["resources"].each do |resource|
-          %a.resource{href: '#'}
+          .resource
             %img{src: resource["screenshot_img_src"]}
             %h2
               = resource["title"]
+            .links
+              - resource["links"].each do |link|
+                %a.link{href: link["url"]}
+                  = link["url"]
+                = "(#{link["type"]})"
             %p
               = resource["description"]
             .clear
