--- a/public/base.css
+++ b/public/base.css
@@ -48,13 +48,24 @@ header h1 img {
 }
 
 .resource h2 {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: bold;
 }
 
 .resource h2,
+.resource ul,
 .resource p {
   margin-bottom: 10px;
+}
+
+.resource .links .link a {
+  text-decoration: none;
+}
+
+.resource .links .link {
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 14px;
 }
 
 .clear {
