--- a/public/base.css
+++ b/public/base.css
@@ -2,6 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
+
+  height: 100%;
+
+  -webkit-transition: background-color 0.5s;
+  transition: background-color 0.5s;
 }
 
 .container {
@@ -70,4 +75,27 @@ header h1 img {
 
 .clear {
   clear: both;
+}
+
+ul.available-resource-links {
+  list-style-type: none;
+  padding: 0;
+  margin: 50px auto;
+  display: block;
+  width: 70px;
+}
+
+ul.available-resource-links li {
+  padding: 0;
+  margin: 0;
+}
+
+ul.available-resource-links li a {
+  padding: 10px;
+  display: block;
+}
+
+ul.available-resource-links li a img {
+  width: 50px;
+  height: 50px;
 }
